# vartypes

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README  README.md  project.config
.github/workflows/: ci.yml
cmake/: vartypesConfig.cmake.in
docs/: build_and_porting.md  data_migration_notes.md  dependency_audit.md  downstream_integration.md  future_work.md  grsim_migration.md  modernization_assessment.md  modernization_log.md  pr5_review.md  serialization_design.md
example/src/: mainwindow.h
tests/: CMakeLists.txt  test_json.cpp  test_vartypes.cpp  test_varval.cpp  test_xml.cpp
vartypes/: VarBase64.cpp  VarBase64.h  VarJSON.cpp  VarJSON.h  VarNotifier.cpp  VarTypesInstance.cpp
vartypes/gui/: VarItem.cpp  VarItemDelegate.cpp  VarTreeModel.cpp  VarTreeView.cpp
vartypes/primitives/: VarAny.h  VarAnyVal.h  VarList.h  VarProtoBufferVal.h  VarType.cpp  VarType.h  VarVal.h
